Agent: catch Throwable per boot test and defer the gate failure (#41)
BootTests' main() called 56 test methods as bare statements. Any of them
throwing ended main(), and run-tests.sh ran the JVM bare under `set -e`, so the
script died at that line: the Python daemon, discovery, supervisor and greeter
suites, the installer tests and the agent build tests never ran. The reader had
no way to tell "one test threw" from "two thirds of the gate never executed".
The issue frames it as four methods declaring `throws Exception`; it is really
17 that declare it and all 56 that can throw unchecked, so the fix is the
runner, not the methods.

main() now builds a list and hands it to runAll(), which invokes each body
inside its own `catch (Throwable)` and reports what it caught through the same
check() counter every failed assertion already uses, naming the test and the
throwable. TestBody.run() declares `throws Throwable` so an Error is contained
too. That is a stated contract in runAll's javadoc rather than an accident of
which signatures happen to declare what.

run-tests.sh captures the JVM status with `|| java_status=$?` instead of letting
`set -e` fire, and fails from a deferred `exit "$java_status"` at the bottom.
The gate is exactly as red and now finishes reporting first. `[ ]` not `(( ))`,
because arithmetic under `set -u` aborts the shell outright and would turn a red
gate into a differently-shaped red that no longer names the suite.

scripts/gate.sh claimed every suite aborts the run on failure, which this makes
false, so it is corrected in the same change.

Verified by injecting a throw into a real test and running the whole script:
exit 1, all seven section headers present, no ALL TESTS PASSED.